feat(docs): complete Korean translations for all 27 docs pages
Learn section (9 pages):
  - image-optimization, seo, themes
  - plugins/overview, analytics, rss, comments
  - deployment/vercel, docker

Reference section (14 pages):
  - reference/overview
  - core/config, fetcher, frontmatter, plugins, types
  - renderer/notion-page, post-list, post-card, theme-provider
  - adapter-nextjs/metadata, structured-data, sitemap
  - cli/create-noxion

Also fix footer copyright {year} placeholder in ko locale

Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-opencode)

Co-authored-by: Sisyphus <clio-agent@sisyphuslabs.ai>

--- a/apps/docs/i18n/ko/docusaurus-theme-classic/footer.json
+++ b/apps/docs/i18n/ko/docusaurus-theme-classic/footer.json
@@ -20,7 +20,7 @@
     "description": "Footer link label"
   },
   "copyright": {
-    "message": "Copyright © {year} Noxion. Docusaurus로 제작.",
+    "message": "Copyright © 2025 Noxion. Docusaurus로 제작.",
     "description": "The footer copyright"
   }
 }
