--- a/apps/docs/i18n/ko/docusaurus-theme-classic/footer.json
+++ b/apps/docs/i18n/ko/docusaurus-theme-classic/footer.json
@@ -41,6 +41,6 @@
   },
   "link.item.label.npm": {
     "message": "npm",
-    "description": "The label of footer link with label=npm linking to https://www.npmjs.com/package/@noxion/core"
+    "description": "The label of footer link with label=npm linking to https://www.npmjs.com/org/noxion"
   }
 }
